cmake_minimum_required(VERSION 3.5.x)
project("logoswap")
add_executable(${PROJECT_NAME} main.c splash.c bitmap.c)
if(MSVC)
  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
else()
  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror -std=c99 -O2)
endif()